added footer, navbar to bottom of page

--- a/aesthetic.html
+++ b/aesthetic.html
@@ -37,6 +37,7 @@
                     <p class="mb-0">"Music and rhythm find their way into the secret places of the soul"</p>
                         <footer class="blockquote-footer footer"><em>Plato</em></footer>
                 </blockquote>
+            </div>
         </div>
         <div class="container-fluid main">
             <p>I was intrigued by the sounds created by my older sister who was learning the violin when I was only five. My parents acquiesce to my request for lesson to make music that was just as beautiful and melodius. Truth be told, mom said she had to suffer through some nail screeching phase in the begining. I persevered alongside my violin teacher and mom; learning to manage exam stress and picked up two distinction award along the way! Johann Sebastian Bach inspires me in my musical journey. He is, in my opinion, the best composer ever lived who crafted two of my favourite musical pieces:</p>
@@ -68,5 +69,34 @@
                 <p>My first violin exam the year before in 2017 was truly my biggest learning moment. It was the first time I became aware of the notion of anxiousness and how difficult it was to maintain control of something as simple as breathing! Having Teacher Teresa coaching me with recitals and calming tactics helped me earned my Distinction. I followed on to earn a second Distinction in 2018.
                 </p>
         </div>
+        <div class="container-fluid domain">
+            <div class="row">
+                <div class="col">
+                    <a href="cognitive.html">
+                        <img class="icon" src="images/icons/math.png" alt="Mathematics"></img>
+                        <br>Olympian
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="physical.html">
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"></img>
+                        <br>Spartan
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="cognitive.html#coding">
+                        <img class="icon" src="images/icons/code.png" alt="Coding"></img>
+                        <br>Coder
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="aesthetic.html">
+                        <img class="icon" src="images/icons/violin.png" alt="Music"></img>
+                        <br>Violinist
+                    </a>
+                </div>
+            </div>
+        </div>
     </body>
+    <footer class="footer"> Copyright &copy 2020 JKDEV. All rights reserved.</footer>
 </html>
