--- a/cognitive.html
+++ b/cognitive.html
@@ -37,6 +37,7 @@
                         <footer class="blockquote-footer footer"><em>Albert Einstein</em></footer>
                 </blockquote>
             </div>
+        </div>
         <div class="container-fluid main">
             <p>Math Olympiad, Coding, Chess</p>
         </div>
@@ -82,5 +83,34 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid domain">
+            <div class="row">
+                <div class="col">
+                    <a href="cognitive.html">
+                        <img class="icon" src="images/icons/math.png" alt="Mathematics"></img>
+                        <br>Olympian
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="physical.html">
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"></img>
+                        <br>Spartan
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="cognitive.html#coding">
+                        <img class="icon" src="images/icons/code.png" alt="Coding"></img>
+                        <br>Coder
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="aesthetic.html">
+                        <img class="icon" src="images/icons/violin.png" alt="Music"></img>
+                        <br>Violinist
+                    </a>
+                </div>
+            </div>
+        </div>
     </body>
+    <footer class="footer"> Copyright &copy 2020 JKDEV. All rights reserved.</footer>
 </html>
