--- a/physical.html
+++ b/physical.html
@@ -37,6 +37,7 @@
                     <p class="mb-0">"It is exercise alone that supports the spirit and keeps the mind in vigor"</p>
                         <footer class="blockquote-footer footer"><em>Cicero</em></footer>
                 </blockquote>
+            </div>
         </div>    
         <div class="container-fluid main">
             <div class="justify-content-center">
@@ -80,7 +81,7 @@
         </div>
         <nav class="nav navbar container-fluid domain">
             <h5>My Journey</h5>
-            <a href="https://www.strava.com/athletes/51155064">Follow me on Strava</a>
+            <a href="https://www.strava.com/athletes/51155064" target="_blank">Follow me on Strava</a>
         </nav>
         <div class="container-fluid main justify-content-center">
             <h6 style="font-weight:800;">Year 2020</h6>
@@ -90,7 +91,36 @@
             <h6 style="font-weight:800;">Year 2018</h6>
                 <p>I started training in Brazilian Jiu Jitsu (BJJ) as a form of fitness and self defence on top of swimming. I've come to appreaciate that both of these are lifeskills for survival. My most crucial take away from BJJ are the values of compassion, bravery, honesty and humility; values which forms the ethics and moral code of this martial art form.  </p>
         </div>
+        <div class="container-fluid domain">
+            <div class="row">
+                <div class="col">
+                    <a href="cognitive.html">
+                        <img class="icon" src="images/icons/math.png" alt="Mathematics"></img>
+                        <br>Olympian
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="physical.html">
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"></img>
+                        <br>Spartan
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="cognitive.html#coding">
+                        <img class="icon" src="images/icons/code.png" alt="Coding"></img>
+                        <br>Coder
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="aesthetic.html">
+                        <img class="icon" src="images/icons/violin.png" alt="Music"></img>
+                        <br>Violinist
+                    </a>
+                </div>
+            </div>
+        </div>
     </body>
+    <footer class="footer"> Copyright &copy 2020 JKDEV. All rights reserved.</footer>
 </html>
 
 
