added home link in bottom page nav

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <p class="mb-0">"Knowing yourself is the begining of all wisdom"</p>
                     <footer class="blockquote-footer footer"><em> Aristotle</em></footter>
                 </blockquote>
+            </div>
         </div>
         <div class="navbar">Accomplishments & Achievements</div>
         <div class="container-fluid main">
@@ -127,6 +128,10 @@
                 <ul>Certificate of Paticipation
                 <br>Introduction to Basic Meditation
                 </ul>
+        <button>Back to Top</button>
+        <button>Download PDF</button>
+        <button>Contact Me</button>
         </div>
     </body>
+     <footer class="intro footer"> Copyright &copy 2020 JKDEV. All rights reserved.</footer>
 </html>
