--- a/physical.html
+++ b/physical.html
@@ -23,7 +23,7 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Domains</a>
-                <div class="dropdown-menu">
+                <div class="dropdown-menu menu">
                     <a class="dropdown-item" href="physical.html">Physical</a>
                     <a class="dropdown-item" href="cognitive.html">Cognitive</a>
                     <a class="dropdown-item" href="aesthetic.html">Aesthetic</a>
@@ -106,6 +106,12 @@
                     </a>
                 </div>
                 <div class="col">
+                    <a href="index.html">
+                        <img class="icon" src="images/jklogo.png" alt="I am JK"></img>
+                        <br>Home
+                    </a>
+                </div>
+                <div class="col">
                     <a href="cognitive.html#coding">
                         <img class="icon" src="images/icons/code.png" alt="Coding"></img>
                         <br>Coder
@@ -120,7 +126,7 @@
             </div>
         </div>
     </body>
-    <footer class="footer"> Copyright &copy 2020 JKDEV. All rights reserved.</footer>
+    <footer class="intro footer"> Copyright &copy 2020 JKDEV. All rights reserved.</footer>
 </html>
 
 
