--- a/physical.html
+++ b/physical.html
@@ -85,7 +85,7 @@
         </nav>
         <div class="container-fluid main justify-content-center">
             <h6 style="font-weight:800;">Year 2020</h6>
-                <p>The COVID19 pandemic has changed how I continue onwards with my journey in fitness and health. I mostly clock 10km of biking or 5km of running around my neighborhood utilizing strava to keep me in check.</p>
+                <p>The COVID19 pandemic has changed how I continue onwards with my journey in fitness and health. I mostly clock 10km of biking or 5km of running around my neighborhood utilizing strava to keep me in check. I have come to appreciate physical fitness as a prerequisite to for the endurance of mental prowess.</p>
             <h6 style="font-weight:800;">Year 2019</h6>
                 <p>2019 was a year where I ventured into various other sporting activity aside from my training in BJJ and swimming! From team based football and badminton to individual focused sports such as figure skating and rock climbing. Rock climbing came so naturally to me that I was given the nickname spider-boy!   </p>
             <h6 style="font-weight:800;">Year 2018</h6>
